--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/logo.png" />
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Quantra</title>
+  <!-- Import the Pi Network App Platform SDK: -->
+  <script src="https://sdk.minepi.com/pi-sdk.js"></script>
+
+  <!-- TODO make sandbox conditional to env (dev / prod) -->
+  <script>
+    // Init Pi SDK:
+    Pi.init({ version: "2.0", sandbox: true });
+  </script>
+</head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
