--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quantra</title>
+  <title>Coixa | Pi wallet</title>
   <!-- Import the Pi Network App Platform SDK: -->
   <script src="https://sdk.minepi.com/pi-sdk.js"></script>
 
